few admin use-cases added
